# cosmopower

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cosmopower/: cosmopower_NN.py  cosmopower_PCAplusNN.py  dataset.py  parser.py  spectra.py  spectra_camb.py  spectra_classy.py  train.py  validate.py
cosmopower/examples/: 1_create_training_data.py  2b_train_PCA_emulator.py  4_cobaya.py  example.yaml  planck_cmb.yaml
cosmopower/wrappers/cobaya/: cosmopower.py
cosmopower/wrappers/cosmosis/: cosmopower_interface.py
demos/: demo_cmb_bao.yaml  demo_desy1clustering.yaml  demo_desy1joint.yaml  demo_multiprobe.yaml
docs/: installation.md
